# agentbeats-cybergym

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  sample.env
.github/workflows/: publish.yml
scenarios/cybergym/: Abstract.md  Dockerfile.green-agent  Dockerfile.purple-agent  scenario.toml
scenarios/cybergym/green-agent/src/: agent.py
scenarios/cybergym/green-agent/tests/: test_agent.py
scenarios/cybergym/purple-agent/: README.md
scenarios/cybergym/purple-agent/src/: agent.py  server.py
scenarios/cybergym/purple-agent/tests/: test_agent.py
